--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -30,6 +30,7 @@
             <h2><%= post.username %></h2>
             <p><%= post.text %></p>
             <img src="<%= post.img %>" alt="Post Image" width="500" height="500"/>
+            <button type="button" onclick="like('<%= post.id%>')">like</button>
             <h3>Comments:</h3>
             <ul>
                 <% post.comments.forEach(comment => { %>
@@ -42,6 +43,16 @@
     <% }); %>
 </ul>
 <script>
+    async function like(pid) {
+        console.log('like')
+        const id = 123
+        const post = await fetch('http://localhost:8989/' + id + '/posts/' + pid, {
+            method: "POST",
+            headers: {
+                "Content-Type": "application/json"
+            },
+        })
+    }
     async function Delete(postID) {
         console.log("delete")
         const post = await fetch('http://localhost:8989/posts/' + postID, {
